# voxelize

./: Cargo.toml  Justfile  README.md
examples/: generate-voxels.rs  spritedump.rs
src/: lib.rs  main.rs
