[package]
name = "voxelize"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dot_vox = "5"
glam = "0.29"
image = "0.25"
itertools = "0.14"

[dev-dependencies]
# TODO: Vox-format is obsolete and was used by the generate example that was a
# failed experiment, should be removed.
vox-format = "0.1"
